opam-version: "2.0"
name: "livereload"
version: "0.1"
maintainer: "Dave Aitken <dave.aitken@gmail.com>"
author: "Dave Aitken <dave.aitken@gmail.com>"
homepage: ""
bug-reports: ""
license: ""
dev-repo: ""
build: [["jbuilder" "build" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "containers"
  "websocket"
  "websocket-lwt"
  "ppx_blob"
  "inotify" { os = "linux" }
  "osx-fsevents" { os = "macos" }
  "opium" {test}
]
