opam-version: "2.0"
name: "livereload"
version: "~dev"
maintainer: "Dave Aitken <dave.aitken@gmail.com>"
authors: "Dave Aitken <dave.aitken@gmail.com>"
homepage: ""
bug-reports: ""
license: ""
dev-repo: ""
build: [["jbuilder" "build" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "containers"
  "websocket"
  "websocket-lwt"
  "ppx_blob"
  # Requires opam2 to work
  # "inotify" { os = "linux" }
  # "osx-fsevents" { os = "macos" }
  "opium" {test}
]
